# mindset-eval

./: .gitmodules  hello.py  pyproject.toml
notebooks/: model_tests.ipynb
scripts/: amodal_completion.py  analysis.py  decoder.py  decomposition.py  depth_drawings.py  download.py  emergent_features.py  nap_vs_mp_change.py  rel_vs_coord.py  un_crowding.py
scripts/illusions/: ebbinghaus.py  jastrow.py  muller_lyer.py  ponzo.py  thatcher.py  tilt.py
scripts/low_mid_vis/: amodal_completion.py  crowding.py  decomposition.py  depth_drawings.py  emergent_features.py  nap_vs_mp_change.py  rel_vs_coord.py  un_crowding.py
scripts/shape_rec/: drawings.py  lines.py
