[project]
name = "mindset-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.8.0",
    "ipython>=8.32.0",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.7",
    "matplotlib>=3.10.0",
    "natsort>=8.4.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "neptune>=1.13.0",
    "numpy>=2.2.2",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "perlin-noise>=1.13",
    "pillow>=11.1.0",
    "pyrootutils>=1.0.4",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "sigstore>=1.0.0",
    "statsmodels>=0.14.4",
    "sty>=1.0.6",
    "timm>=1.0.14",
    "toml>=0.10.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
